resources/demo-crm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-crm-service
spec:
  type: ClusterIP
  selector:
    app: demo-crm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
